# poc-uwas

./: .env.example  README.md  get_tourists_places.py  get_tourits_places.py  get_weather.py  main.py  pyproject.toml  run_migrations.py  test.duckdb  tourists_places.csv
db/: places.db  prod.db  test.db
dbt/: .user.yml  dbt_project.yml  profiles.yml
migrations/: 20240801153800.up.sql  20240801164800.down.sql  20240801164800.up.sql
uwas-poc/: pyvenv.cfg
