[tool.poetry]
name = "poc-uwas"
version = "0.1.0"
description = "Proof of Concept of Un Week-end Au Soleil app"
authors = ["Thomas Perrein <perrein.thomas.tipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
dlt = "^0.5.2"
streamlit = "^1.37.1"
dbt-core = "^1.8.5"
dbt-duckdb = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
